layout do jogo finalizado

--- a/style.css
+++ b/style.css
@@ -42,42 +42,14 @@ body {
     display: none;
 }
 
-#vitoria, #derrota {
-    color: var(--white);
-    background-color: var(--pupler);
-}
-
-.end-screen h3 {
-    font-size: 2.2rem;
-    text-transform: uppercase;
-}
-
-.end-screen {
-    padding: 10px;
-    width: 80%;
-    border-radius: 10px;
-    border: none;
-    font-size: 1rem;
-    font-family: 'Poppins', sans-serif;
-    cursor: pointer;
-    text-transform: uppercase;
-}
-
-.center {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
 h1 {
     background-color: var(--pupler);
     color: var(--white);
     padding: 15px 0;
     font-size: 1.5rem;
     text-align: center;
-    border-top-right-radius: 10px;
     border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 h2 {
@@ -96,20 +68,6 @@ h2 {
     position: relative;
 }
 
-.placar {
-    width: 200px;
-    height: 76px;
-    border: 2px solid var(--dark);
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    text-align: center;
-    font-size: 4rem;
-    font-weight: bold;
-    font-family: 'Courier New', Courier, monospace;
-}
-
 .label {
     border-radius: 10px;
     width: 60px;
@@ -123,15 +81,29 @@ h2 {
 
 .bg-green {
     background-color: var(--green);
-    left: 15%;
+    left: 16%;
 }
 
 .bg-red {
     background-color: var(--red);
-    right: 15%;
+    right: 16%;
 }
 
-.bg-gray {
+.placar {
+    width: 200px;
+    height: 76px;
+    border: 2px solid var(--pupler);
+    border-radius: 10px;
+    text-align:center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 3rem;
+    font-weight: bold;
+}
+
+.bg-grey {
     background-color: var(--grey);
     height: 180px;
 }
@@ -142,10 +114,119 @@ h2 {
     text-align: center;
 }
 
-.selected-image div img {
+.selected-image div img{
     max-width: 80%;
 }
 
 .reverse {
     transform: scaleX(-1);
+}
+
+
+
+.buttons {
+    width: 100%;
+    display: flex;
+    position:relative;
+    align-items: center;
+    justify-content:space-around;
+}
+
+.buttons img{
+    max-width: 60%;
+    transition: .3s;
+}
+
+label {
+    position: relative
+}
+
+[type=radio]{
+    position: absolute;
+    left: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+[type=radio]:checked + button {
+    background-color: var(--pupler);
+}
+
+[type=radio] + .btn {
+    cursor: pointer;
+    margin-right: 0.5rem;
+}
+
+.btn {
+    width: 100px;
+    height: 100px;
+    border: 2px solid var(--pupler);
+    border-radius: 50%;
+    background-color:var(--grey);
+    cursor: pointer;
+    transition: .3s;
+}
+
+.btn:hover{
+    background-color: var(--pupler);
+}
+
+.btn:hover > img {
+    max-width: 70%;
+}
+
+.btn-jogar, .btn-jogar:disabled:hover {
+    width: 90%;
+    padding: 10px;
+    border: 2px solid var(--pupler);
+    border-radius: 10px;
+    background-color: var(--grey);
+    color: var(--dark);
+    margin-top: 20px;
+    font-size: 1rem;
+    font-weight: 900;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.btn-jogar:hover{
+    background-color: var(--pupler);
+    color: var(--white)
+}
+
+#vitoria, #derrota {
+    color: var(--white);
+    z-index: 999;
+    background-color: var(--pupler);
+}
+
+.end-screen h3{
+    color: var(--white);
+    font-size: 2.2rem;
+    text-transform: uppercase;
+}
+
+.end-screen span{
+    font-size: 2rem;
+}
+
+.end-screen button {
+    padding: 10px;
+    width: 80%;
+    border-radius: 10px;
+    border: none;
+    font-size: 1rem;
+    font-family: 'Poppins', sans-serif;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+.center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
