--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;500;600;700&display=swap');
 
 :root {
-    --pupler : #4A154B;
+    --red : #580808;
     --white: #FFF;
     --dark: #333;
     --green: #11780F;
-    --red: #D2300C;
+    --red2: #D2300C;
     --grey: #D9D9D9;
     --dark-transparent: rgba(255,255,255,.5)
 }
@@ -43,7 +43,7 @@ body {
 }
 
 h1 {
-    background-color: var(--pupler);
+    background-color: var(--red);
     color: var(--white);
     padding: 15px 0;
     font-size: 1.5rem;
@@ -85,14 +85,14 @@ h2 {
 }
 
 .bg-red {
-    background-color: var(--red);
+    background-color: var(--red2);
     right: 16%;
 }
 
 .placar {
     width: 200px;
     height: 76px;
-    border: 2px solid var(--pupler);
+    border: 2px solid var(--red);
     border-radius: 10px;
     text-align:center;
     display: flex;
@@ -151,7 +151,7 @@ label {
 }
 
 [type=radio]:checked + button {
-    background-color: var(--pupler);
+    background-color: var(--red);
 }
 
 [type=radio] + .btn {
@@ -162,7 +162,7 @@ label {
 .btn {
     width: 100px;
     height: 100px;
-    border: 2px solid var(--pupler);
+    border: 2px solid var(--red);
     border-radius: 50%;
     background-color:var(--grey);
     cursor: pointer;
@@ -170,7 +170,7 @@ label {
 }
 
 .btn:hover{
-    background-color: var(--pupler);
+    background-color: var(--red);
 }
 
 .btn:hover > img {
@@ -180,7 +180,7 @@ label {
 .btn-jogar, .btn-jogar:disabled:hover {
     width: 90%;
     padding: 10px;
-    border: 2px solid var(--pupler);
+    border: 2px solid var(--red);
     border-radius: 10px;
     background-color: var(--grey);
     color: var(--dark);
@@ -193,14 +193,14 @@ label {
 }
 
 .btn-jogar:hover{
-    background-color: var(--pupler);
+    background-color: var(--red);
     color: var(--white)
 }
 
 #vitoria, #derrota {
     color: var(--white);
     z-index: 999;
-    background-color: var(--pupler);
+    background-color: var(--red);
 }
 
 .end-screen h3{
